resolve the path problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,53 @@
-/*# sourceMappingURL=style.css.map */
+.rvbs-search-rv .filster_section {
+  position: sticky;
+  top: 0; /* the height of the header (60px) + its bottom margin (20px) */
+  height: -moz-max-content;
+  height: max-content;
+  margin-bottom: 20px;
+}
+.rvbs-search-rv .show_aval_room {
+  padding-left: 20px;
+  flex-grow: 1;
+  width: 75%;
+}
+@media screen and (max-width: 992px) {
+  .rvbs-search-rv {
+    /* Ensure the collapsible filter content scrolls */
+  }
+  .rvbs-search-rv .filster_section {
+    width: 100%;
+    z-index: 11;
+    top: 0px;
+    max-height: 100vh;
+  }
+  .rvbs-search-rv #rooms_filter {
+    max-height: 100vh; /* Adjust based on requirement */
+    overflow-y: auto;
+  }
+}
+
+.flex-container {
+  display: flex;
+}
+
+aside {
+  position: sticky;
+  top: 80px; /* the height of the header (60px) + its bottom margin (20px) */
+  background: rgb(255, 100, 100);
+  padding: 20px;
+  width: 20%;
+  height: 500px;
+  margin-bottom: 20px;
+}
+
+main {
+  padding-left: 20px;
+  flex-grow: 1;
+}
+
+.content {
+  background: rgb(200, 200, 200);
+  height: 300px;
+  padding: 20px;
+  margin-bottom: 20px;
+}/*# sourceMappingURL=style.css.map */
